# libkinetic

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL-centos.md  Makefile  README.md  kinetic_interface.h  kinetic_model.h
doc/man/man3/: ki_aio_exec.3  ki_close.3  ki_create.3  ki_exec.3  ki_open.3  ki_valid.3
include/: config.h
include/kinetic/: handlers.h  result.h  types.h
include/kinetic/protocol/: kinetic.pb-c.h
scripts/: README.md  ktest-runner
scripts/fixtures/: delete.bash
scripts/functions/: keys.bash  util.bash
scripts/tests/: workloads.bash
scripts/tests/data/: get.simple-4.kinetic
scripts/tests/usecases/: batch-put.serial.bash  get.serial.bash  put-get.serial.bash
scripts/valgrind-fixtures/: delete.bash
simplified/: Makefile
simplified/protocol/: kinetic.pb-c.c
simplified/src/: kinetic.h  types.h
src/: CMakeLists.txt  Makefile  aio.c  basickv.c  basickv.h  batch.c  config.h.in  del.c  device.c  error.c  exec.c  flush.c  get.c  getlog.c  getlog.h  interface.c  iter.c  kerrors.c  kinetic.h  kinetic_internal.h  kinetic_types.h  kio.h  ktb.c  ktli.c  ktli.h  ktli_session.c  ktli_session.h  ktli_socket.c  ktli_test.c  labels.c  message.h  noop.c  open.c  pinop.c  protocol_interface.c  protocol_interface.h  protocol_types.h  put.c  range.c  security.c  (+7 more)
src/protocol/: CMakeLists.txt  kinetic.pb-c.c
tests/: Makefile  README.md  hashtable.cpp  kfixtures.cpp  test_getlog.c  test_kinetic.c  test_kinetic.h
tests/batch/: Makefile  requests.cpp
tests/blackbox/: ktest-runner
tests/blackbox-bash/: ktest-runner  test-kinetic
tests/blackbox-bash/functions/: keys.bash  util.bash
tests/blackbox-py/: pyproject.toml
tests/blackbox-py/ktest/: tools.py
tests/blackbox-py/tests/: test_ktest.py  test_tools_timed.py
tests/blackbox/tests/: workloads.bash
tests/getlog/: Makefile  helper.cpp  helper.hpp  requests.cpp  test_getlog_requests.c
tests/keyval/: Makefile  helper.cpp  requests.cpp
tests/kinetic_interface/: test_hmac.c
tests/range/: Makefile  helper.cpp  helper.hpp  requests.cpp
tests/whitebox/: Makefile  hashtable.cpp  hashtable.hpp  kfixtures.cpp  kfixtures.hpp
tests/whitebox/batch/: helper.cpp  helper.hpp  requests.cpp
tests/whitebox/getlog/: Makefile  helper.cpp  helper.hpp  requests.cpp
tests/whitebox/keyval/: Makefile  helper.cpp  helper.hpp  (+1 more)
toolbox/: Makefile  read_request.c  write_request.c
toolbox/bkv/: Makefile  Sanity.bkv  Sanity.bkv.verified  bkv.c  bkv.h  del.c  exists.c  get.c  limits.c  put.c  util.c
toolbox/kctl/: Makefile  Sanity.kctl  Sanity.kctl.verified  acl.c  batch.c  cluster.c  del.c  device.c  exec.c  flush.c  get.c  info.c  kctl.c  kctl.h  mjson.c  mjson.h  pin.c  ping.c  put.c  range.c  stats.c  upgrade.c  util.c
(+13 files in other folders)
